<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.setting.SettingActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/choose_your_language"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.Material3.DayNight" />

    <ImageView
        android:id="@+id/imgBtn_english"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/english_flag"
        android:src="@drawable/english_flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/english"
        app:layout_constraintEnd_toEndOf="@+id/imgBtn_english"
        app:layout_constraintStart_toStartOf="@+id/imgBtn_english"
        app:layout_constraintTop_toBottomOf="@+id/imgBtn_english" />

    <ImageView
        android:id="@+id/imgBtn_indo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/indonesian_flag"
        android:src="@drawable/indonesia_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/indo"
        app:layout_constraintEnd_toEndOf="@+id/imgBtn_indo"
        app:layout_constraintStart_toStartOf="@+id/imgBtn_indo"
        app:layout_constraintTop_toBottomOf="@+id/imgBtn_indo" />
</androidx.constraintlayout.widget.ConstraintLayout>